--- a/mt_tuio_client_framework_2015/Tuio Client Example/Tuio Client Example.vcxproj
+++ b/mt_tuio_client_framework_2015/Tuio Client Example/Tuio Client Example.vcxproj
@@ -81,6 +81,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Cube\Wuerfel.cpp" />
     <ClCompile Include="..\Recognizer\GeometricRecognizer.cpp" />
     <ClCompile Include="..\TUIO_CPP\oscpack\ip\win32\NetworkingUtils.cpp" />
     <ClCompile Include="..\TUIO_CPP\oscpack\ip\win32\UdpSocket.cpp" />
@@ -90,6 +91,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Cube\wuerfel.h" />
     <ClInclude Include="..\Recognizer\GeometricRecognizer.h" />
     <ClInclude Include="..\Recognizer\GeometricRecognizerTypes.h" />
     <ClInclude Include="..\Recognizer\GestureTemplate.h" />
